--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "d6"
   ],
   "author": "xenonth",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "three": "^0.153.0"
+  },
+  "devDependencies": {
+    "vite": "^4.3.9"
+  }
 }
